[package]
name = "larkbot-notifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "probe"
path = "src/probe.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
axum = "0.6.6"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.0"
futures = "0.3.28"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
tokio = { version = "1.0", features = ["full"] }
